# bumblebee

./: .gitignore  README.md  docker-compose.yml  install.ps1  run.bat  run.ps1  set_up_minio.ps1  stop.ps1
beehive-front/: angular.json  capacitor.config.ts  package-lock.json  package.json
beehive-guard/: README.md  dockerfile  pom.xml
beehive-mind/: .dockerignore  .env  Dockerfile  README.md  activate.ps1  beehive-mind_env.yaml  deepFilterRequirements.txt  install.ps1  model_gen.ipynb  pytest.ini  requirements.txt  run.ps1  run.py  setup.py  (+2 more)
beehive-node/fw/: CMakeLists.txt  README.md  sdkconfig
beehive-node/fw/apps/dht_sensor/: CMakeLists.txt  dht_sensor_main.c
beehive-node/fw/apps/esp_http_client_example/: CMakeLists.txt  esp_http_client_example.c
beehive-node/fw/apps/hx711_example/: CMakeLists.txt  Kconfig.projbuild  hx711_example_main.c  idf_component.yml
beehive-node/fw/apps/i2s_recorder/: CMakeLists.txt  Kconfig.projbuild  i2s_recorder_main.c
beehive-node/fw/apps/sd_card_example/: CMakeLists.txt  idf_component.yml  sd_card_example_main.c
beehive-node/fw/components/dpp_easy_wifi_qr/include/: dpp_easy_wifi_qr.h
beehive-node/fw/components/node_i2s_pdm_mic/: CMakeLists.txt  Kconfig.projbuild  node_i2s_pdm_mic.c
beehive-node/fw/components/node_i2s_pdm_mic/include/: node_i2s_pdm_mic.h
beehive-node/fw/components/node_sd/: CMakeLists.txt  Kconfig.projbuild  node_sd.c
beehive-node/fw/components/node_sd/include/: node_sd.h
beehive-node/fw/main/: sd_card_example_main.c
beehive-node/fw/middleware/dpp_easy_wifi_qr/: CMakeLists.txt  Kconfig.projbuild  dpp_easy_wifi_qr.c
beehive-node/fw/middleware/node_dht/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  node_dht.c
beehive-node/fw/middleware/node_dht/include/: node_dht.h
(+315 files in other folders)
